site(demo): Fix incorrect source code
* Fix char dot (.) being transformed into char colon (:)

* Fix source tabpanel being too wide

--- a/site/demo.css
+++ b/site/demo.css
@@ -2,7 +2,8 @@
   user-select: revert !important;
 }
 [role="tabpanel"] {
-  width: 80dvi;
+  max-width: 80ch;
+  width: 95dvi;
   overflow: scroll;
 }
 
